--- a/CubesFramework/CubesFramework.csproj
+++ b/CubesFramework/CubesFramework.csproj
@@ -16,6 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Management" Version="5.0.0" />
     <PackageReference Include="Unity" Version="5.11.10" />
   </ItemGroup>
