--- a/CubesFramework/CubesFramework.csproj
+++ b/CubesFramework/CubesFramework.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net472;net48;net5</TargetFrameworks>
@@ -7,14 +7,15 @@
     <NeutralLanguage>en-US</NeutralLanguage>
     <Copyright>Cubes.ly</Copyright>
     <Description>Cubes Framework provides some modules that help developers dealing with advanced problem like security and hardware accessing and so no ... in an easy way.</Description>
-    <PackageLicenseExpression>CubesLy</PackageLicenseExpression>
-    <PackageIcon>icon.png</PackageIcon>
+    <PackageVersion>1.3.1.0</PackageVersion>
+    <Title>CubesFramework</Title>
+    <Summary>Cubes Framework provides some modules that help developers dealing with advanced problem like security and hardware accessing and so no ... in an easy way.</Summary>
     <PackageIconUrl />
+    <PackageIcon>icon.png</PackageIcon>
     <PackageReleaseNotes>Security and hardware accessing modules added</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <MinimumPlatformVersion>7.0</MinimumPlatformVersion>
-    <ApplicationIcon>D:\Cubes\Projects\CubesFramework\icon.png</ApplicationIcon>
+    <ApplicationIcon>D:\Cubes\Projects\CubesFramework\icon.ico</ApplicationIcon>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <ProduceReferenceAssembly>True</ProduceReferenceAssembly>
     <SignAssembly>False</SignAssembly>
